--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
-./.idea
-node_modules
+node_modules/
+.expo/
+dist/
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+.idea
+# macOS
+.DS_Store
 package-lock.json
