--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -249,7 +249,7 @@ android {
     }
 
     // applicationVariants are e.g. debug, release
-    applicationVariants.all { variant ->
+    applicationVariants.configureEach { variant ->
         variant.outputs.each { output ->
             // For each separate APK per architecture, set a unique version code as described here:
             // https://developer.android.com/studio/build/configure-apk-splits.html
@@ -314,15 +314,15 @@ dependencies {
         }
     }
 
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
-    debugImplementation("com.facebook.flipper:flipper:0.125.0") {
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    debugImplementation('com.facebook.flipper:flipper:0.174.0') {
         exclude group: 'com.facebook.fbjni'
     }
-    debugImplementation("com.facebook.flipper:flipper-network-plugin:0.125.0") {
+    debugImplementation('com.facebook.flipper:flipper-network-plugin:0.174.0') {
         exclude group: 'com.facebook.flipper'
         exclude group: 'com.squareup.okhttp3', module: 'okhttp'
     }
-    debugImplementation("com.facebook.flipper:flipper-fresco-plugin:0.125.0") {
+    debugImplementation('com.facebook.flipper:flipper-fresco-plugin:0.174.0') {
         exclude group: 'com.facebook.flipper'
     }
 
@@ -340,7 +340,7 @@ if (isNewArchitectureEnabled()) {
     // If new architecture is enabled, we let you build RN from source
     // Otherwise we fallback to a prebuilt .aar bundled in the NPM package.
     // This will be applied to all the imported transtitive dependency.
-    configurations.all {
+    configurations.configureEach {
         resolutionStrategy.dependencySubstitution {
             substitute(module("com.facebook.react:react-native"))
                     .using(project(":ReactAndroid"))
@@ -354,7 +354,7 @@ if (isNewArchitectureEnabled()) {
 
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
-task copyDownloadableDepsToLibs(type: Copy) {
+tasks.register('copyDownloadableDepsToLibs') {
     from configurations.implementation
     into 'libs'
 }
