--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ web-build/
 # macOS
 .DS_Store
 package-lock.json
+android/code_secret_client_14867528384-0g6orf4tf1uuudrlmd8bldivk21lui76.apps.googleusercontent.com.json
+./pc-api-7223632834914907923-368-0f826667197c.json
