--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,27 +20,27 @@
         "project": "./tsconfig.json"
     },
     "rules": {
-        "import/no-unresolved": 0,
-        "react/jsx-filename-extension": [1, {
-            "extensions": [
-                ".ts",
-                ".tsx"
-            ]
-        }],
-        "prettier/prettier": [
-            "error",
-            {
-                "singleQuote": true,
-                "trailingComma": "all",
-                "arrowParens": "avoid",
-                "endOfLine": "auto"
-            }
-        ],
-        "no-use-before-define": "off",
-        "@typescript-eslint/no-use-before-define": ["error"],
-        "import/extensions": ["error", "never"],
-        "react/prop-types": 0,
-        "no-shadow": "off",
-        "@typescript-eslint/no-shadow": ["error"]
+//        "import/no-unresolved": 0,
+//        "react/jsx-filename-extension": [1, {
+//            "extensions": [
+//                ".ts",
+//                ".tsx"
+//            ]
+//        }],
+//        "prettier/prettier": [
+//            "error",
+//            {
+//                "singleQuote": true,
+//                "trailingComma": "all",
+//                "arrowParens": "avoid",
+//                "endOfLine": "auto"
+//            }
+//        ],
+//        "no-use-before-define": "off",
+//        "@typescript-eslint/no-use-before-define": ["error"],
+//        "import/extensions": ["error", "never"],
+//        "react/prop-types": 0,
+//        "no-shadow": "off",
+//        "@typescript-eslint/no-shadow": ["error"]
     }
 }
