--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 node_modules
 package-lock.json
 android/code_secret_client_14867528384-0g6orf4tf1uuudrlmd8bldivk21lui76.apps.googleusercontent.com.json
-./pc-api-7223632834914907923-368-0f826667197c.json
+pc-api-7223632834914907923-368-0f826667197c.json
