--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,8 @@
     "src/**/*.ts",
     "tests/**/*.ts"
   ],
-  "exclude": [
-    "node_modules",
-    ".vscode"
-  ]
+//  "exclude": [
+//    "node_modules",
+//    ".vscode"
+//  ]
 }
