--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-./.idea
+.idea
 node_modules
 package-lock.json
 android/code_secret_client_14867528384-0g6orf4tf1uuudrlmd8bldivk21lui76.apps.googleusercontent.com.json
