--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+.idea
+node_modules
+package-lock.json
+android/code_secret_client_14867528384-0g6orf4tf1uuudrlmd8bldivk21lui76.apps.googleusercontent.com.json
+pc-api-7223632834914907923-368-0f826667197c.json
 node_modules/
 .expo/
 dist/
@@ -9,7 +14,10 @@ npm-debug.*
 *.mobileprovision
 *.orig.*
 web-build/
-.idea
 # macOS
 .DS_Store
-package-lock.json
+Footer
+ios
+assets
+android/.gradle
+android/app
