--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
             - checkout
             -   run:
                     name: Install dependencies
-                    command: elif [ -e package-lock.json ]; then npm ci else npm i fi
+                    command: if [ -e package-lock.json ]; then npm ci else npm i fi
             -   run:
                     name: Trigger build
                     command: npx eas-cli build --platform android
