--- a/app.json
+++ b/app.json
@@ -25,6 +25,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
+      "versionCode": 1,
       "package": "ipl.vinci.be.rabbit"
     },
     "web": {
