--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,10 @@ jobs:
 workflows:
     build_app:
         jobs:
-            - install_dependencies
+            - install_dependencies:
+                filters:
+                    branches:
+                        only: master
             -   eas_build:
                     requires:
                         - install_dependencies
