update google key because of a leak

--- a/eas.json
+++ b/eas.json
@@ -17,6 +17,10 @@
     }
   },
   "submit": {
-    "production": {}
+    "production": {
+      "android": {
+        "serviceAccountKeyPath": "./pc-api-7223632834914907923-368-0f826667197c.json"
+      }
+    }
   }
 }
