--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@expo-google-fonts/quicksand": "^0.2.2",
-    "@expo/webpack-config": "^0.17.2",
+    "@react-navigation/bottom-tabs": "^6.5.1",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
+    "@truffle/hdwallet-provider": "^1.0.41-1",
     "expo": "~47.0.8",
     "expo-app-loading": "^2.1.1",
     "expo-font": "^11.0.1",
@@ -21,21 +22,20 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-elements": "^3.4.2",
-    "react-native-hr-component": "^2.0.3",
-    "react-native-login-google": "^2.0.3",
-    "react-native-progress": "^5.0.0",
+    "react-native-paper": "^5.0.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.9"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.9",
+    "react-navigation": "^4.4.4",
+    "react-navigation-material-bottom-tabs": "^2.3.5",
+    "react-navigation-tabs": "^2.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@tsconfig/react-native": "^2.0.3",
-    "@types/jest": "^29.2.4",
     "@types/react": "~18.0.14",
-    "@types/react-native": "^0.70.8",
-    "@types/react-test-renderer": "^18.0.0",
-    "typescript": "^4.9.4"
+    "@types/react-native": "~0.70.6",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
