--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/bottom-tabs": "^6.5.1",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
+    "@supabase/supabase-js": "^2.1.4",
+    "dotenv": "^16.0.3",
     "expo": "~47.0.8",
     "expo-app-loading": "^2.1.1",
     "expo-font": "^11.0.1",
