--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-dotenv": "^3.4.6",
     "react-native-elements": "^3.4.2",
     "react-native-hr-component": "^2.0.3",
     "react-native-login-google": "^2.0.3",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
