--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-elements": "^3.4.2",
+    "react-native-item-select": "^0.4.2",
     "react-native-paper": "^5.0.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
