--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-web": "~0.18.9",
     "react-navigation": "^4.4.4",
     "react-navigation-material-bottom-tabs": "^2.3.5",
-    "react-navigation-tabs": "^2.11.2"
+    "react-navigation-tabs": "^2.11.2",
+    "expo-linear-gradient": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
