--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@expo-google-fonts/quicksand": "^0.2.2",
+    "@expo/webpack-config": "^0.17.2",
     "@react-navigation/bottom-tabs": "^6.5.1",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
-    "@truffle/hdwallet-provider": "^1.0.41-1",
     "@supabase/supabase-js": "^2.1.4",
     "dotenv": "^16.0.3",
     "expo": "~47.0.8",
@@ -25,7 +25,9 @@
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.6",
     "react-native-elements": "^3.4.2",
-    "react-native-paper": "^5.0.1",
+    "react-native-hr-component": "^2.0.3",
+    "react-native-login-google": "^2.0.3",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-url-polyfill": "^1.3.0",
