--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/quicksand": "^0.2.2",
+    "@expo/webpack-config": "^0.17.2",
     "@react-native-community/datetimepicker": "^6.7.1",
     "@react-navigation/bottom-tabs": "^6.5.1",
     "@react-navigation/native": "^6.1.0",
@@ -26,6 +27,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^3.4.2",
     "react-native-item-select": "^0.4.2",
+    "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-paper": "^5.0.1",
@@ -35,8 +37,7 @@
     "react-native-web": "~0.18.9",
     "react-navigation": "^4.4.4",
     "react-navigation-material-bottom-tabs": "^2.3.5",
-    "react-navigation-tabs": "^2.11.2",
-    "@expo/webpack-config": "^0.17.2"
+    "react-navigation-tabs": "^2.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
