--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.6",
     "react-native-elements": "^3.4.2",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-hr-component": "^2.0.3",
     "react-native-login-google": "^2.0.3",
     "react-native-progress": "^5.0.0",
