--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@expo-google-fonts/quicksand": "^0.2.2",
     "@expo/webpack-config": "^0.17.2",
+    "@flyerhq/react-native-chat-ui": "^1.4.3",
+    "@react-native-camera-roll/camera-roll": "^5.2.0",
+    "@react-native-community/netinfo": "^9.3.7",
     "@react-navigation/bottom-tabs": "^6.5.1",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
+    "@stream-io/flat-list-mvcp": "^0.10.2",
     "@supabase/supabase-js": "^2.1.4",
     "dotenv": "^16.0.3",
     "expo": "~47.0.8",
@@ -21,18 +25,31 @@
     "expo-font": "^11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
+    "react-chat-elements": "^12.0.6",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-document-picker": "^8.1.3",
     "react-native-dotenv": "^3.4.6",
     "react-native-elements": "^3.4.2",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-gifted-chat": "^1.0.4",
+    "react-native-haptic-feedback": "^1.14.0",
     "react-native-hr-component": "^2.0.3",
+    "react-native-image-crop-picker": "^0.39.0",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-login-google": "^2.0.3",
     "react-native-progress": "^5.0.0",
+    "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-share": "^8.0.1",
+    "react-native-svg": "^13.6.0",
     "react-native-url-polyfill": "^1.3.0",
-    "react-native-web": "~0.18.9"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-video": "^5.2.1",
+    "react-native-web": "~0.18.9",
+    "stream-chat-react-native": "^5.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
