--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@expo-google-fonts/quicksand": "^0.2.2",
     "@expo/webpack-config": "^0.17.2",
-    "@react-native-community/datetimepicker": "^6.7.1",
+    "@react-native-community/datetimepicker": "6.5.2",
     "@react-navigation/bottom-tabs": "^6.5.1",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
-    "@truffle/hdwallet-provider": "^1.0.41-1",
     "@supabase/supabase-js": "^2.1.4",
+    "@truffle/hdwallet-provider": "^1.0.41-1",
     "dotenv": "^16.0.3",
     "expo": "~47.0.8",
     "expo-app-loading": "^2.1.1",
@@ -36,12 +36,13 @@
     "react-native-paper": "^5.0.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "react-navigation": "^4.4.4",
     "react-navigation-material-bottom-tabs": "^2.3.5",
-    "react-native-url-polyfill": "^1.3.0",
-    "react-navigation-tabs": "^2.11.2"
+    "react-navigation-tabs": "^2.11.2",
+    "rn-nodeify": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -51,5 +52,8 @@
     "@types/react-native-modern-datepicker": "^1.0.1",
     "typescript": "^4.6.3"
   },
-  "private": true
+  "private": true,
+  "browsers": {
+    "fs": false
+  }
 }
