--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@expo/webpack-config": "^0.17.2",
     "@flyerhq/react-native-chat-ui": "^1.4.3",
     "@react-native-camera-roll/camera-roll": "^5.2.0",
-    "@react-native-community/netinfo": "^9.3.7",
+    "@react-native-community/netinfo": "9.3.5",
     "@react-navigation/bottom-tabs": "^6.5.1",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
@@ -26,9 +26,9 @@
     "expo-app-loading": "^2.1.1",
     "expo-font": "^11.0.1",
     "expo-status-bar": "~1.4.2",
-    "react": "^17.0.2",
+    "react": "18.1.0",
     "react-chat-elements": "^12.0.6",
-    "react-dom": "^17.0.2",
+    "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-date-picker": "^4.2.6",
     "react-native-datepicker": "^1.7.2",
@@ -48,11 +48,11 @@
     "react-native-image-resizer": "^1.4.5",
     "react-native-login-google": "^2.0.3",
     "react-native-progress": "^5.0.0",
-    "react-native-reanimated": "^2.13.0",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-share": "^8.0.1",
-    "react-native-svg": "^13.6.0",
+    "react-native-svg": "13.4.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.1",
