--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/quicksand": "^0.2.2",
     "@expo/webpack-config": "^0.17.2",
-    "@react-native-community/datetimepicker": "^6.7.1",
+    "@react-native-community/datetimepicker": "6.5.2",
     "@flyerhq/react-native-chat-ui": "^1.4.3",
     "@react-native-camera-roll/camera-roll": "^5.2.0",
     "@react-native-community/netinfo": "9.3.5",
@@ -26,9 +26,7 @@
     "expo-font": "^11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react": "18.1.0",
     "react-chat-elements": "^12.0.6",
-    "react-dom": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-date-picker": "^4.2.6",
