--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-font": "^11.0.1",
     "expo-status-bar": "~1.4.2",
     "nanoid": "^4.0.0",
+    "npm": "^8.19.2",
     "react": "18.1.0",
     "react-chat-elements": "^12.0.6",
     "react-circle-chart": "^1.0.4",
