--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
             - checkout
             -   run:
                     name: Install dependencies
-                    command: if [ -e package-lock.json ]; then npm ci; else npm i; fi
+                    command: if [ -e package-lock.json ]; then npm ci --legacy-peer-deps; else npm i --legacy-peer-deps; fi
             -   run:
                     name: Trigger build
                     command: npx eas-cli build --platform android --non-interactive
